--- a/index.html
+++ b/index.html
@@ -31,12 +31,13 @@
             <div class="left">
               <h1>Treinos <span>exclusivos</span> para você!</h1>
                 <br>
+                <p>
                   Nós criamos treinos <strong>exclusivos e únicos para você.</strong></br>
                   Invista no seu corpo e <strong>tenha muito mais performance</strong> e</br> qualidade de vida.
                 </p>
                 <button>
                   <img src="images/whats.svg" alt="Ícone do whatsapp">
-                  COMECE JÁ
+                  Comece já
                 </button>
               </div>
               <div class="fitness-jump">
